--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="col-lg-4 p-5 leftbar">
           <div class="text-center about">
             <img
-              src="C:\Users\user\OneDrive\Pictures\Desktop\LaibaKhan\pic1.jpeg"
+              src="C:\Users\user\OneDrive\Pictures\Desktop\LaibaKhan\pic1.JPEG"
               alt="Profile Picture"
               class="img-fluid mb-4"
             />
